// Vitest Snapshot v1

exports[`MapObject view > Template > should render correctly 1`] = `
"<header-stub title=\\"map_object.edit\\" has-back=\\"\\"></header-stub>
<app-content-stub>
  <div class=\\"flex flex-col mx-auto w-full py-3\\">
    <icon-list-item-stub icon=\\"link\\" label=\\"\\" description=\\"\\" data-test=\\"linked-bookable\\" class=\\"mb-3\\"></icon-list-item-stub>
    <button-stub icon=\\"link\\" text=\\"MAP_OBJECT.LINK_TO_BOOKABLE\\" disabled=\\"false\\" outlined=\\"false\\"></button-stub>
  </div>
</app-content-stub>"
`;

exports[`MapObject view > Template > should render correctly when selecting bookable 1`] = `
"<header-stub title=\\"map_object.link_to_bookable\\" has-back=\\"\\"></header-stub>
<app-content-stub>
  <div class=\\"flex flex-col mx-auto w-full py-3\\">
    <selectable-list-item-stub label=\\"Couch\\" description=\\"\\" selected=\\"false\\" data-test=\\"select-bookable\\" class=\\"cursor-pointer mb-3\\"></selectable-list-item-stub>
    <selectable-list-item-stub label=\\"Table\\" description=\\"\\" selected=\\"false\\" data-test=\\"select-bookable\\" class=\\"cursor-pointer mb-3\\"></selectable-list-item-stub>
  </div>
</app-content-stub>"
`;

exports[`MapObject view > should find bookables for selected space 1`] = `
{
  "query": {
    "space": "60f53bede6f8313dff7f99e0",
  },
}
`;
